agregando 2 rutas
